k8s/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
  labels:
    app: poi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryhro9346.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 80
