k8s/trip-viewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripsviewer
  namespace: web
  labels:
    app: tripsviewer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tripsviewer
  template:
    metadata:
      labels:
        app: tripsviewer
    spec:
      containers:
      - name: tripsviewer
        image: registryhro9346.azurecr.io/tripinsights/tripsviewer:1.0
        ports:
        - containerPort: 80
