k8s/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
  labels:
    app: trips
spec:
  replicas: 5
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryhro9346.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-sync"
