k8s/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api
  labels:
    app: userprofile
spec:
  replicas: 3
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryhro9346.azurecr.io/tripinsights/userprofile:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-sync"
