k8s/trip-viewer-load-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripsviewer
  namespace: web
spec:
  selector:
    app: tripsviewer
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
