k8s/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
  labels:
    app: user-java
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryhro9346.azurecr.io/tripinsights/user-java:1.1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-sync"  
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  selector:
    app: user-java
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
