k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripsviewer
            port:
              number: 80
